# executorch

./: CMakePresets.json  check_vision_export.py  debug_qwen_2b.py  debug_vision_shapes.py  inspect_qwen_inputs.py  inspect_visual_tower.py  knowledge.md  test_import.py  test_multimodal_runner.py  test_vision_export_only.py  verify_cpp_compatibility.py  verify_qwen3_5_multimodal.py
.ci/docker/ci_commit_pins/: pytorch.txt
.github/workflows/: pull.yml
backends/arm/_passes/: arm_pass_manager.py  decompose_gru_pass.py  decompose_lstm_pass.py  decompose_rnn_pass.py
backends/arm/scripts/public_api_manifest/: validate_public_api_manifest.py
backends/arm/test/misc/: test_validate_public_api_manifest.py
backends/arm/test/ops/: test_add.py
backends/arm/tosa/: partitioner.py
backends/cadence/aot/: ops_registrations.py  ref_implementations.py  replace_ops.py
backends/cadence/aot/quantizer/: fusion_pass.py
backends/cadence/aot/tests/: test_replace_ops_passes.py
backends/cadence/fusion_g3/operators/: op_mean.cpp
backends/cuda/: CMakeLists.txt
backends/cuda/benchmarks/: benchmark_moe.py  benchmark_sdpa.py
backends/cuda/runtime/shims/: sort.cu  sort.h
backends/cuda/tests/: test_fused_moe.py  test_triton_sdpa.py  test_triton_sdpa_splitk.py
backends/cuda/triton/kernels/: __init__.py  fused_moe.py  sdpa.py
backends/webgpu/runtime/: WebGPUBackend.cpp
backends/xnnpack/runtime/: XNNCompiler.cpp  XNNHeader.cpp  XNNWeightsCache.cpp
examples/arm/executor_runner/: CMakeLists.txt
examples/models/llama/: attention.py
examples/models/qwen3_5/: export_qwen3_5_multimodal.py  model.py
examples/models/qwen3_5/runner/: BUCK  CMakeLists.txt  main.cpp  targets.bzl
examples/models/qwen3_5_moe/: export.py  model.py
extension/android/: CMakeLists.txt
extension/llm/runner/: llm_runner_helper.cpp  multimodal_prefiller.cpp  multimodal_prefiller.h  stats.h  text_llm_runner.cpp
scripts/: build_android_library.sh  create_frameworks.sh
(+2 files in other folders)
